--- a/package.json
+++ b/package.json
@@ -12,6 +12,16 @@
     "@google/generative-ai": "^0.24.1",
     "@novu/node": "^2.6.6",
     "@supabase/supabase-js": "^2.94.1",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/multer": "^1.4.12",
+    "@types/node": "^22.10.0",
+    "@types/passport": "^1.0.17",
+    "@types/passport-facebook": "^3.0.4",
+    "@types/passport-google-oauth20": "^2.0.17",
+    "@types/passport-linkedin-oauth2": "^1.5.6",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "csv-parse": "^6.1.0",
@@ -29,21 +39,11 @@
     "passport-linkedin-oauth2": "^2.0.0",
     "pdf-parse": "1.1.1",
     "resend": "^6.9.1",
+    "typescript": "^5.7.0",
     "word-extractor": "^1.0.4",
     "zod": "^3.24.0"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.9",
-    "@types/multer": "^1.4.12",
-    "@types/node": "^22.10.0",
-    "@types/passport": "^1.0.17",
-    "@types/passport-facebook": "^3.0.4",
-    "@types/passport-google-oauth20": "^2.0.17",
-    "@types/passport-linkedin-oauth2": "^1.5.6",
-    "tsx": "^4.19.0",
-    "typescript": "^5.7.0"
+    "tsx": "^4.19.0"
   }
 }
